finish dashboard update

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ OPEN_WA_PORT=8003
 OPEN_WA_PROXY_PORT=8002
 BOT_PHONE_NUMBER="62123123123"
 
-ORINAI_CHAT_ENDPOINT="http://123.123.12.123:8080/chat_api"
+ORINAI_CHAT_ENDPOINT="http://123.123.12.123:8080"
 
 OPENAI_API_KEY=
 SECRET_KEY=
