--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,17 @@ bidict==0.23.1
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
+distro==1.9.0
 fastapi==0.116.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+jiter==0.11.0
 MarkupSafe==3.0.2
 numpy==2.3.2
+openai==2.3.0
 pandas==2.3.2
 pycryptodome==3.23.0
 pydantic==2.11.7
@@ -27,6 +30,7 @@ simple-websocket==1.1.0
 six==1.17.0
 sniffio==1.3.1
 starlette==0.47.3
+tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
