--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,21 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+iniconfig==2.3.0
 Jinja2==3.1.6
 jiter==0.11.0
 MarkupSafe==3.0.2
 numpy==2.3.2
 openai==2.3.0
+packaging==25.0
 pandas==2.3.2
+phonenumbers==9.0.21
+pluggy==1.6.0
 pycryptodome==3.23.0
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==9.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-engineio==4.12.2
